--- a/mybookstore/pubspec.yaml
+++ b/mybookstore/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.1.0
   equatable: ^2.0.5
   auto_size_text: ^3.0.0
+  flutter_rating_bar: ^4.0.1
 
   cupertino_icons: ^1.0.2
 
